--- a/res/layout/activity_profile.xml
+++ b/res/layout/activity_profile.xml
@@ -17,7 +17,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/profile_icon"
             android:layout_width="120dp"
             android:layout_height="120dp"
@@ -35,9 +35,9 @@
             android:text="Email" />
 
         <ImageView
-            android:layout_width="50dp"
-            android:layout_height="40dp"
-            android:layout_marginLeft="160dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginLeft="170dp"
             android:layout_marginTop="10dp"
             android:onClick="editProfile"
             android:src="@drawable/ic_baseline_edit_24"
