--- a/res/layout/activity_select.xml
+++ b/res/layout/activity_select.xml
@@ -7,76 +7,130 @@
     android:background="@drawable/ground1"
     tools:context=".ui.create_match.Select">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent">-->
+
+<!--        <TextView-->
+<!--            android:id="@+id/select"-->
+<!--            android:layout_width="402dp"-->
+<!--            android:layout_height="43dp"-->
+<!--            android:layout_marginStart="4dp"-->
+<!--            android:layout_marginLeft="4dp"-->
+<!--            android:layout_marginTop="44dp"-->
+<!--            android:background="#651FFF"-->
+<!--            android:gravity="center"-->
+<!--            android:text="select"-->
+<!--            android:textAlignment="center"-->
+<!--            android:textColor="#FFFFFF"-->
+<!--            android:textSize="18dp"-->
+<!--            android:textStyle="bold"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="parent" />-->
+
+<!--        <TextView-->
+<!--            android:id="@+id/textView9"-->
+<!--            android:layout_width="191dp"-->
+<!--            android:layout_height="37dp"-->
+<!--            android:layout_marginStart="5dp"-->
+<!--            android:layout_marginLeft="5dp"-->
+<!--            android:layout_marginTop="35dp"-->
+<!--            android:background="#69529C"-->
+<!--            android:gravity="center"-->
+<!--            android:text="Select New"-->
+<!--            android:textAlignment="center"-->
+<!--            android:textColor="#FFFFFF"-->
+<!--            android:textSize="18sp"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@+id/select" />-->
+
+<!--        <ListView-->
+<!--            android:id="@+id/newList"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="400dp"-->
+<!--            android:layout_marginTop="16dp"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@+id/textView9" />-->
+
+<!--        <TextView-->
+<!--            android:id="@+id/textView8"-->
+<!--            android:layout_width="191dp"-->
+<!--            android:layout_height="37dp"-->
+<!--            android:layout_marginStart="4dp"-->
+<!--            android:layout_marginLeft="4dp"-->
+<!--            android:layout_marginTop="436dp"-->
+<!--            android:background="#69529C"-->
+<!--            android:gravity="center"-->
+<!--            android:text="Previos Selected"-->
+<!--            android:textAlignment="center"-->
+<!--            android:textColor="#FFFFFF"-->
+<!--            android:textSize="18sp"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@+id/textView9" />-->
+
+<!--        <ListView-->
+<!--            android:id="@+id/previosList"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="400dp"-->
+<!--            android:layout_marginStart="4dp"-->
+<!--            android:layout_marginLeft="4dp"-->
+<!--            android:layout_marginTop="24dp"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@+id/textView8" />-->
+
+<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
+
+
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-        <TextView
-            android:id="@+id/select"
-            android:layout_width="402dp"
-            android:layout_height="43dp"
-            android:layout_marginStart="4dp"
-            android:layout_marginLeft="4dp"
-            android:layout_marginTop="44dp"
-            android:background="#651FFF"
-            android:gravity="center"
-            android:text="select"
-            android:textAlignment="center"
-            android:textColor="#FFFFFF"
-            android:textSize="18dp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/textView9"
             android:layout_width="191dp"
             android:layout_height="37dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="35dp"
             android:background="#69529C"
             android:gravity="center"
             android:text="Select New"
+            android:layout_margin="10dp"
             android:textAlignment="center"
             android:textColor="#FFFFFF"
             android:textSize="18sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/select" />
+            />
 
         <ListView
             android:id="@+id/newList"
             android:layout_width="match_parent"
             android:layout_height="400dp"
-            android:layout_marginTop="16dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView9" />
+            android:layout_margin="10dp"
+            android:layout_below="@+id/textView9"
+            />
 
         <TextView
             android:id="@+id/textView8"
             android:layout_width="191dp"
             android:layout_height="37dp"
-            android:layout_marginStart="4dp"
-            android:layout_marginLeft="4dp"
-            android:layout_marginTop="436dp"
             android:background="#69529C"
             android:gravity="center"
             android:text="Previos Selected"
             android:textAlignment="center"
             android:textColor="#FFFFFF"
             android:textSize="18sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView9" />
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="100dp"
+            android:layout_below="@+id/newList"
+            />
 
         <ListView
             android:id="@+id/previosList"
             android:layout_width="match_parent"
             android:layout_height="400dp"
-            android:layout_marginStart="4dp"
-            android:layout_marginLeft="4dp"
-            android:layout_marginTop="24dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView8" />
+            android:layout_margin="10dp"
+            android:layout_below="@+id/textView8"
+            />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </RelativeLayout>
+
+
 </androidx.core.widget.NestedScrollView>
