--- a/res/layout/card_layout.xml
+++ b/res/layout/card_layout.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_layout"
     android:layout_width="match_parent"
-    android:layout_marginBottom="2dp"
+    android:layout_margin="2dp"
     android:layout_height="wrap_content"
     >
 
@@ -22,21 +22,29 @@
             android:layout_height="match_parent"
             android:orientation="horizontal">
 
-            <androidx.cardview.widget.CardView
-                android:paddingLeft="10dp"
-                android:layout_width="60dp"
-                android:layout_height="match_parent"
-                app:cardCornerRadius="10dp">
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:id="@+id/profile_picture"
+                android:layout_marginTop="5dp"
+                android:layout_marginLeft="10dp"
+                />
 
-                <ImageView
-                    android:id="@+id/profile_picture"
-                    android:padding="5dp"
-                    android:layout_marginTop="5dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="60dp"
-                    android:src="@drawable/player_icon" />
+<!--            <androidx.cardview.widget.CardView-->
+<!--                android:paddingLeft="10dp"-->
+<!--                android:layout_width="60dp"-->
+<!--                android:layout_height="match_parent"-->
+<!--                app:cardCornerRadius="10dp">-->
 
-            </androidx.cardview.widget.CardView>
+<!--                <ImageView-->
+<!--                    android:id="@+id/profile_picture"-->
+<!--                    android:padding="5dp"-->
+<!--                    android:layout_marginTop="5dp"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="60dp"-->
+<!--                    android:src="@drawable/player_icon" />-->
+
+<!--            </androidx.cardview.widget.CardView>-->
 
             <LinearLayout
                 android:layout_width="320dp"
