--- a/res/layout/fragment_create_match.xml
+++ b/res/layout/fragment_create_match.xml
@@ -9,56 +9,65 @@
 
     <EditText
         android:id="@+id/matchName"
-        android:layout_width="276dp"
-        android:layout_height="48dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginStart="70dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginEnd="70dp"
+        android:background="@drawable/edit_text_bg"
         android:ems="10"
         android:hint="Match Name"
         android:inputType="textPersonName"
-        android:textColor="#FFFFFF"
+        android:padding="7dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/team1"
-        android:layout_width="271dp"
-        android:layout_height="51dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginStart="70dp"
-        android:layout_marginLeft="70dp"
         android:layout_marginTop="20dp"
+        android:layout_marginEnd="70dp"
+        android:background="@drawable/edit_text_bg"
         android:ems="10"
         android:hint="Team 1"
         android:inputType="textPersonName"
-        android:textColor="#FFFFFF"
+        android:padding="7dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/matchName" />
 
     <EditText
         android:id="@+id/team2"
-        android:layout_width="275dp"
-        android:layout_height="51dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginStart="70dp"
-        android:layout_marginLeft="70dp"
         android:layout_marginTop="20dp"
+        android:layout_marginEnd="70dp"
+        android:background="@drawable/edit_text_bg"
         android:ems="10"
         android:hint="Team 2"
         android:inputType="textPersonName"
-        android:textColor="#FFFFFF"
+        android:padding="7dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/team1" />
 
     <EditText
         android:id="@+id/overs"
-        android:layout_width="264dp"
-        android:layout_height="49dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginStart="70dp"
-        android:layout_marginLeft="70dp"
         android:layout_marginTop="20dp"
+        android:layout_marginEnd="70dp"
+        android:background="@drawable/edit_text_bg"
         android:ems="10"
         android:hint="overs e.g. 20"
         android:inputType="number"
-        android:textColor="#FFFFFF"
+        android:padding="7dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/team2" />
 
@@ -68,7 +77,7 @@
         android:layout_height="45dp"
         android:layout_marginStart="119dp"
         android:layout_marginTop="53dp"
-        android:background="#325CAF"
+        android:background="@drawable/login_btn_bg"
         android:text="create"
         android:textColor="#FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
