--- a/res/layout/nav_header_main.xml
+++ b/res/layout/nav_header_main.xml
@@ -12,15 +12,26 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <ImageView
+<!--    <ImageView-->
+<!--        android:id="@+id/imageView"-->
+<!--        android:layout_width="234dp"-->
+<!--        android:layout_height="106dp"-->
+<!--        android:tooltipText="Profile"-->
+<!--        android:onClick="gotoProfile"-->
+<!--        android:contentDescription="@string/nav_header_desc"-->
+<!--        android:paddingTop="@dimen/nav_header_vertical_spacing"-->
+<!--        app:srcCompat="@drawable/player_icon" />-->
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:layout_width="230dp"
+        android:layout_height="100dp"
         android:id="@+id/imageView"
-        android:layout_width="234dp"
-        android:layout_height="106dp"
-        android:tooltipText="Profile"
         android:onClick="gotoProfile"
         android:contentDescription="@string/nav_header_desc"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@drawable/player_icon" />
+        android:clickable="true"
+        android:contextClickable="true"
+        android:src="@drawable/player_icon"
+        />
 
     <TextView
         android:id="@+id/name"
